--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,9 +1,10 @@
-<%= link_to "Upload new photo", new_photo_path, class: "btn btn-default" %>
-<%if @photos == [] %>
-<p>Photos ninche</p>
-<% else %>
-<%  @photos.each do |photo|%>
-  <%=image_tag(@photo.photo_url) %>
-  <%= photo.name %>
-  <%end%>
-  <%end%>
+<%= link_to "Upload new photo", new_photo_path, class: "btn btn-default"%>
+
+<% if @photos == [] %>
+ <p>Photo</p>
+ <% else %>
+ 	<% @photos.each do |photo| %>
+ 		<h3 style="color: #0772A1; margin-left: 50%;"><%= photo.name %></h3>
+ 	<%= image_tag(photo.photo_url) %>
+ 	<% end %>
+<% end %>
