--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -1,10 +1,10 @@
 <p><%= f.label :category %></p>
 <%= select_tag 'category_id', options_from_collection_for_select(Category.all, 'id', 'name')%>
+</br>	
+<p><%= f.label :name %></p>
+<%= f.text_field :name %></br>
 
-<p><%= f.label :name%></p>
-<%= f.text_field :name %> <br />
-
-<p> <%= f.label "Upload Photo" %> </p>
+<p> <%= f.label "Upload Photo" %></p>
 <%= f.file_field :photo %>
 
-<p><%= f.submit "Save"%></p>
+<div><br /><%= f.submit "Save" %></div>
